# FairPlay-Protocol

./: .gitignore  Anchor.toml  README.md  codama.js  codama.json  package.json  tsconfig.json
app/: page.tsx
app/scoring-model/: page.tsx
backend/src/services/: campaignStore.ts
components/: campaign-launch-modal.tsx
frontend/components/: CampaignManager.tsx
frontend/fairplay/: package-lock.json  package.json
frontend/fairplay/app/: layout.tsx  page.tsx
frontend/fairplay/app/documentation/: page.tsx
frontend/fairplay/app/how-it-works/: page.tsx
frontend/fairplay/app/scoring-model/: page.tsx
frontend/fairplay/frontend/: README.md
frontend/fairplay/frontend/components/: campaign-finalize-modal.tsx  campaign-launch-modal.tsx  wallet-connect.tsx
frontend/fairplay/frontend/hooks/: use-solana.ts
frontend/fairplay/frontend/lib/: anchor-integration.ts  contribution-handler.ts  solana-integration.ts  solana-program.ts
frontend/fairplay/frontend/pages/: documentation.tsx  home.tsx  how-it-works.tsx  scoring-model.tsx
lib/: contribution-handler.ts  solana-integration.ts
programs/fairplay/: Cargo.toml
programs/fairplay/src/: error.rs  lib.rs
programs/fairplay/src/instructions/: claim.rs  deposit.rs  finalize.rs  init_contrib.rs  init_escrow.rs  initialize.rs  mod.rs
programs/fairplay/src/state/: campaign_config.rs  contributor_state.rs  escrow.rs  mod.rs
programs/fairplay/tests/: fairplay_edgecases_test.ts  fairplay_mocha_test.ts  fairplay_test.ts
