[package]
name = "fairplay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fairplay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

[dev-dependencies]
# litesvm = "0.6.1"
mollusk-svm = "=0.4.2"
solana-program = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-address-lookup-table-interface = "3.0.0"
